test_yuriiq/catalog/language/german/checkout/cart.php
<?php

// text
$_['text_rewrite']	= 'Überschreiben?';
$_['text_button_clear']	= 'Papierkorb leeren';
$_['text_recurring']	= '%s every %s %s';
$_['text_payment_profile']	= 'Zahlungs Profil';
$_['text_shipping_detail']	= 'Geben Sie Ihren Zielort ein, um die geschätzten Versandkosten zu erhalten.';
$_['text_shipping_estimate']	= 'Estimate Shipping &amp; Taxes**';
$_['text_day']	= 'Tag';
$_['text_until_cancelled']	= 'bis auf Widerruf';
$_['text_use_coupon']	= 'Use Coupon Code**';
$_['text_reward']	= 'Erfolg: Ihre Bonuspunkte Rabatt angewendet wurde!';
$_['text_default_cart_name']	= 'Warenkorb';
$_['text_use_voucher']	= 'Use Gift Voucher**';
$_['text_month']	= 'Monat';
$_['text_shipping_method']	= 'Bitte wählen Sie die gewünschte Versandart an dieser Reihenfolge zu verwenden.';
$_['text_week']	= 'Woche';
$_['text_payment_description']	= '%s jeder %d %s(s) für %d Zahlung';
$_['text_shipping']	= 'Erfolg: Ihre Versand Schätzung angewandt wurde!';
$_['text_trial_description']	= '%s jeder %d %s(s) für %d Zahlung then';
$_['text_points']	= 'Reward Points: %s**';
$_['text_empty']	= 'Ihr Einkaufswagen ist leer!';
$_['text_next']	= 'Was würden Sie als nächstes tun?**';
$_['text_success']	= 'Erfolg: Sie haben hinzugefügt <a href="%s">%s</a> auf Ihre <a href="%s">Einkaufswagen</a>!';
$_['text_login']	= 'Achtung: Sie müssen <a href="%s">Login</a> oder <a href="%s">ein Konto erstellent</a> Um Preise sehen!';
$_['text_error_save_name']	= 'Das Feld darf nicht leer sein!';
$_['text_recurring_item']	= 'Wiederkehrende Artikel';
$_['text_next_choice']	= 'Choose if you have a discount code or reward points you want to use or would like to estimate your delivery cost.';
$_['text_success_clear_cart']	= 'Ihr Warenkorb ist leer';
$_['text_items']	= '%s';
$_['text_trial']	= '%s every %s %s for %s payments then ';
$_['text_year']	= 'Jahr';
$_['text_save']	= 'Speichern?';
$_['text_semi_month']	= 'Halb Monat';
$_['text_remove']	= 'Erfolg: Sie haben Ihrem Warenkorb geändert!';
$_['text_success_save_list']	= 'Ihre Liste wurde erfolgreich gespeichert!';
$_['text_length']	= ' for %s payments';
$_['text_payment_until_canceled_description']	= '%s every %d %s(s) until canceled';
$_['text_coupon']	= 'Erfolg: Ihr Gutschein-Rabatt angewendet wurde!';
$_['text_voucher']	= 'Erfolg: Ihr Gutschein Rabatt angewendet wurde!';
$_['text_success_save_name']	= 'Der name wurde erfolgreich gespeichert';
$_['text_use_reward']	= 'Use Reward Points (Available %s)**';
$_['text_change_cart']	= '[Bearbeiten?]';

// save
$_['save_cart_success']	= 'Der Korb wurde erfolgreich gespeichert';
$_['save_cart_error']	= 'Fehler beim speichern Korb';

// error
$_['error_stock']	= 'Produkte mit *** gekennzeichnet sind, sind nicht in der gewünschten Menge oder nicht auf Lager!';
$_['error_no_shipping']	= 'Warnung: Keine Versandoptionen zur Verfügung. Bitte <a href="%s">kontaktieren Sie uns</a> für die Unterstützung!';
$_['error_reward']	= 'Warning: Please enter the amount of reward points to use!**';
$_['error_maximum']	= 'Warning: The maximum number of points that can be applied is %s!**';
$_['error_postcode']	= 'Postleitzahl muss zwischen 2 und 10 Zeichen lang sein!';
$_['error_zone']	= 'Bitte wählen Sie eine Region / Staat!';
$_['error_profile_required']	= 'Bitte wählen Sie eine Zahlungsprofil!';
$_['error_country']	= 'Bitte wählen Sie ein Land!';
$_['error_minimum']	= 'Mindestbestellmenge für %s is %s!';
$_['error_product']	= 'Hinweis: Es gibt keine Produkte in Ihrem Warenkorb!';
$_['error_points']	= 'Warning: You don\';
$_['error_coupon']	= 'Warning: Coupon is either invalid, expired or reached it\';
$_['error_required']	= '%s erforderlich!';
$_['error_shipping']	= 'Achtung: Versandverfahren notwendig!';
$_['error_voucher']	= 'Warning: Gift Voucher is either invalid or the balance has been used up!**';

// button
$_['button_create']	= ' Eine leere den Papierkorb';
$_['button_save_name']	= 'Speichern name';
$_['button_save']	= 'Speichern Warenkorb';

// entry
$_['entry_zone']	= 'Region / Bundesland:';
$_['entry_coupon']	= 'Enter your coupon here:**';
$_['entry_postcode']	= 'PLZ:';
$_['entry_reward']	= 'Points to use (Max %s):**';
$_['entry_voucher']	= 'Enter your gift voucher code here:**';
$_['entry_country']	= 'Land:';

// column
$_['column_model']	= 'Modell';
$_['column_name']	= 'Produktname';
$_['column_image']	= 'Bild';
$_['column_total']	= 'gesamt';
$_['column_quantity']	= 'Menge';
$_['column_price']	= 'Stückpreis';

// confirm
$_['confirm_no']	= 'Nein';
$_['confirm_cancel']	= 'Abbrechen';
$_['confirm_header']	= 'Bestätigen Sie';
$_['confirm_yes']	= ' Ja';

// heading
$_['heading_title']	= 'Warenkorb';
?>